Korrektur du :monkey_face:

--- a/v400/content/diskussion.tex
+++ b/v400/content/diskussion.tex
@@ -3,27 +3,27 @@
 Im ersten Teil dieses Versuches wurde versucht das Reflexionsgestz \eqref{eqn:Reflexionsgesetz} nachzuweisen. Dazu wurde die absolute Differenz von Einfalls- und 
 Ausfallswinkel gebildet. Dabei ergab sich eine mittlere Differenz von $\mathrm{\Delta}\alpha = \qty{2.64}{\degree}$. Aufgrund dieser großen Differenz wurde das 
 Reflexionsgesetz \eqref{eqn:Reflexionsgesetz} nicht nachgewiesen. Da die Differenz keinen großen Schwankungen unterliegt ist nicht von einem statistischen Fehler auszugehen.
-Diese Konstanz deutet also auf einen systematischen Fehler hin. Dieser liegt vermutlich in den ungenügenden Mitteln des Aufbaus. Durch händische Unterlage einer Schablone kann 
-nicht für eine genau Ausrichtung garantirert werden. Außerdem hat die Schablone nicht den ganzen Aufbau unterlegt, weshalb die Winkelablesung nicht gut möglich war. Eine 
-ungenaue Einstellung der Messapparatur, wie zum Beispiel eine leichte Neigung oder Versetzung des Spiegels, kann ebenfalls für einen konstanten Fehler sorgen. 
+Diese Konstanz deutet also auf einen systematischen Fehler hin. Dieser liegt vermutlich darin, dass der Reflexionsspiegel in falscher Orientierung eingesetzt wurde und so 
+in einem kleinen Winkel zur eigentlich erwünschten Reflexionsfläche stand. Des Weiteren sind andere Fehlerquellen, wie eine schiefe Unterlage der Messskala nicht
+auszuschließen. 
 
-Danach wurde das Brechungsgesetz \eqref{eqn:Brechung} untersucht. Dabei ergab sich experimentell bestimmter Brechungsindex $n_{\text{exp}} = \num{1.486 +- 0.026}$. Dieser
-weißt zum Literaturwert $n_{\text{Lit}} = \num{1.489}$ eine Abweichung von $\mathrm{\Delta}n = \qty{0.2}{\percent}$. Aufgrund der sehr geringen Abweichung ist die Messung 
+Danach wurde das Brechungsgesetz \eqref{eqn:Brechung} untersucht. Dabei ergab sich ein experimentell bestimmter Brechungsindex $n_{\text{exp}} = \num{1.486 +- 0.026}$. Dieser
+weißt zum Literaturwert $n_{\text{Lit}} = \num{1.489}$ eine Abweichung von $\symup{\Delta}n = \qty{0.2}{\percent}$. Aufgrund der sehr geringen Abweichung ist die Messung 
 lediglich durch Ablesefehler behaftet. Daher ist diese Messung als qualitativ anzunehmen. Aus dem experimentellen Brechungsindex wurde dann die Lichtgeschwindigkeit in 
 Acryl errechnet. Diese ergab sich zu $c_{\text{Acryl}} = \qty{2.018(0.036)e8}{\metre\per\second}$ und kann aufgrund der zugrunde liegenden kleinen Abweichung ebenfalls als 
-qualitativ angenommenw werden. 
+qualitativ angenommen werden. 
 
-Nun wurde der Strahlenversatz an einem Prisma untersucht. Dabei wurde der Strahlungsversatz über zwei Methoden berechnet. Zwischen den beiden Methoden ergab sich eine 
-maximale Abweichung von $\mathrm{\Delta}s = \qty{2.2}{\percent}$. Daher können beide Methoden als Gleichwertig angenommen werden.
+Anschließend wurde der Strahlenversatz an einem Prisma untersucht. Dabei wurde der Strahlenversatz über zwei Methoden berechnet. Zwischen den beiden Methoden ergibt sich eine 
+maximale Abweichung von $\symup{\Delta}s = \qty{2.2}{\percent}$. Daher können beide Methoden als gleichwertig angenommen werden.
 
 Weiter wurde an einem Prisma der Gesamtreflexionswinkel $\delta$ untersucht. Der \autoref{tab:Prisma} ist zu entnehmen, dass beide verwendeten Methoden eine ähnlich gute 
-qualität haben und somit keine eindeutige Präferenz für eine der Methoden ausgesprochen werden kann. 
+Qualität haben und somit keine eindeutige Präferenz für eine der Methoden ausgesprochen werden kann. 
 
 Zuletzt wurde die Beugung an einem Gitter untersucht. Dabei wurde ein roter Laser der Wellenlänge $\lambda_{\text{theo, rot}} = \qty{635}{\nano\metre}$ und ein grüner Laser
 der Wellenlänge $\lambda_{\text{theo, grün}} = \qty{532}{\nano\metre}$ verwendet. Aus der Messung ergaben sich für die beiden Laser experimentell bestimmte Mittelwerte von 
 $\overline{\lambda}_{\text{rot}} = \qty{650.18 +- 17.81}{\nano\metre}$ und $\overline{\lambda}_{\text{grün}} = \qty{543.51 +- 14.21}{\nano\metre}$. Für den roten Laser ergibt 
-sich daher eine Abweichung von $\mathrm{\Delta}\lambda_{\text{rot}} = \qty{2.4}{\percent}$. Der experimentelle Wert des grünen Laser weicht um 
-$\mathrm{\Delta}\lambda_{\text{grün}} = \qty{2.2}{\percent}$ vom angegebenen Wert ab. Da dies beides sehr kleine Abweichungen sind ist die Bestimmung der Wellenlänge 
+sich daher eine Abweichung von $\symup{\Delta}\lambda_{\text{rot}} = \qty{2.4}{\percent}$. Der experimentelle Wert des grünen Laser weicht um 
+$\symup{\Delta}\lambda_{\text{grün}} = \qty{2.2}{\percent}$ vom angegebenen Wert ab. Da dies beides sehr kleine Abweichungen sind ist die Bestimmung der Wellenlänge 
 qualitativ gelungen und unterliegt lediglich kleinen statistischen Fehlern.
 
-Insgesamt wurde die geforderten Gesetze mit zufriedenstellender Genauigkeit bestätigt. Lediglich des Reflexionsgesetz konnte nicht eindeutig bewiesen werden. 
+Insgesamt wurden die geforderten Gesetze mit zufriedenstellender Genauigkeit bestätigt. Lediglich des Reflexionsgesetz konnte nicht eindeutig bewiesen werden. 
