--- a/v400/content/theorie.tex
+++ b/v400/content/theorie.tex
@@ -1,31 +1,30 @@
 \section{Ziel}
 \label{sec:Ziel}
-Durch diesem Versuch werden die fundamentalen physikalischen Gesetze der Strahlenoptik untersucht. Dazu wird überprüft, ob sich monochromatisches Licht unter Beugung, Brechung 
-und Reflexion der Theorie nach verhält.
-
+In diesem Versuch werden die fundamentalen physikalischen Gesetze der Strahlenoptik untersucht. Dazu werden experimentelle Messwerte mit den theoretisch zu erwartenden
+Resultaten vergliechen. Es wird die Beugung, Brechung und Reflexion von monochromatischen Licht betrachtet.
 \section{Theorie}
 \label{sec:Theorie}
 Licht ist eine elektromagnetische Welle. Daher kann Licht in komplexer Weise durch die Maxwell-Gleichungen beschrieben werden. Dies ist für die fundamentalen Gesetze der
-Strahlenoptik nicht nötig. Es genügt Licht auf ein einfacheres Verhalten zu vereinfachen. Dazu wird Licht ,aufbauend auf den niederländischen Physiker 
+Strahlenoptik nicht nötig. Es genügt, Licht auf ein fundamentaleres Verhalten zu vereinfachen. Dazu wird Licht ,aufbauend auf die Überlegungen des niederländischen Physikers 
 \textit{Christiaan Huygens}, auf das Ausbreitungsverhalten reduziert. Gemäß des \textit{Huygensschen Prinzips} breitet sich Licht entlang der Wellennormalen aus. Die 
 Wellennormale steht immer orthogonal zur \textit{Wellenfront} und ist in \autoref{fig:Huygensbrechung} durch einen roten Pfeil skizziert. Das Huygenssche Prinzip sagt nun aus,
 dass sich die Welle ausbreitet, indem an jedem Punkt der Wellenfront eine neue radiale Elementarwelle gleicher Frequenz entsteht. Durch Überlagerung aller dieser Elementarwellen 
-ergibt sich eine neue Wellenfront. Dies beschreibt eine gradlinige Propagation einer Lichtwelle ohne Veränderung des Ausbreitungsmediums. Trifft eine Welle mit diesem 
-gedanklichem Modell nun auf ein unterschiedliches Medium wird die Welle \textit{gebrochen},\textit{gebeugt} und oder \textit{reflektiert}. Diese Wechselwirkung mit einem
-anderem Medium entsteht, da sich Wellen, so auch die Elementarwellen nach Huygens, in unterschiedlichen Medien unterschiedlich schnell ausbreiten. Die drei genannten 
-Wechselwirkungen treten dann in Abhänigkeit vom Licht und Beugungsmaterial auf. 
+ergibt sich eine neue Wellenfront. Dies beschreibt eine gradlinige Propagation einer Lichtwelle ohne Veränderung des Ausbreitungsmediums. Trifft eine Lichtwelle in diesem 
+gedanklichen Modell nun auf ein anderes Medium, wird die Welle \textit{gebrochen},\textit{gebeugt} und oder \textit{reflektiert}. Diese Wechselwirkung mit einem
+anderen Medium entsteht, da sich Wellen, so auch die Elementarwellen nach Huygens, in unterschiedlichen Medien unterschiedlich schnell ausbreiten. Die drei genannten 
+Wechselwirkungen treten dann in Abhänigkeit von den Eigenschaften der Lichtwelle und des Beugungsmaterials auf. 
 
 \begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{content/HuygensscheBrechung.png}
-    \caption{In dieser Abbildung ist schematisch das Huygenssche Prinzip dargestellt. \cite{v400}.}
+    \caption{In dieser Abbildung ist das Huygenssche Prinzip schematisch dargestellt. \cite{v400}.}
     \label{fig:Huygensbrechung}
 \end{figure}
 
 \subsection{Reflexion}
 \label{subsec:Reflexion}
-Nun wird ein Lichtstrahl betrachtet, welcher in einem Winkelintervall von $[\qty{0}{\degree},\qty{90}{\degree}]$ zu Lot auf ein Grenzmedium trifft. Das Medium habe die 
-Eigenschaft, dass das Licht nicht in es eintreten kann, sonder vollständig reflektiert wird. Diese Situation ist in \autoref{fig:Reflexion} dargestellt. In dieser Abbildung
+Nun wird ein Lichtstrahl betrachtet, welcher in einem Winkelintervall von $[\qty{0}{\degree},\qty{90}{\degree}]$ zum Lot auf ein Grenzmedium trifft. Es wird nur der reflektierte Teil
+der Lichtwelle betrachtet. Diese Situation ist in \autoref{fig:Reflexion} dargestellt. In dieser Abbildung
 beschreibt $\alpha_1$ den Einfallswinkel der Lichtwelle und $\alpha_2$ den \textit{Reflexionswinkel}. Für Reflexion gilt gemäß der Strahlenoptik 
 \begin{equation}
   \label{eqn:Reflexionsgesetz}
@@ -41,9 +40,9 @@ beschreibt $\alpha_1$ den Einfallswinkel der Lichtwelle und $\alpha_2$ den \text
 
 \subsection{Brechung}
 \label{subsec:Brechung}
-Es wird dieselbe Ausgangslage betrachtet wie in \autoref{subsec:Reflexion}. Nun hat das Grenzmedium aber die Eigenschaft, dass das Licht vollständig in das Medium eindringen
-kann. Aufgrund der unterschiedlichen Ausbreitungsgeschwindigkeiten läuft das Licht nun mit einem Brechungswinkel $\beta$ durch das Medium. Diese Situation wird in 
-\autoref{fig:Brechung}dargestellt. Dieses Konzept kann ebenfalls aus dem 
+Nun wird bei selbiger Ausgangslage der transmitierte Teil des Lichts betrachtet.  
+Aufgrund der unterschiedlichen Ausbreitungsgeschwindigkeiten läuft das Licht nun mit einem Brechungswinkel $\beta$ durch das Medium. Diese Situation wird in 
+\autoref{fig:Brechung} dargestellt. Dieses Konzept kann ebenfalls aus dem 
 Huygenschen Prinzip hergeleitet werden. Nach dem \textit{Snelliusschen Brechungsgesetz} verhalten sich Einfalls- und Brechungswinkel gemäß
 \begin{equation}
   \label{eqn:Brechung}
@@ -58,8 +57,8 @@ zueinander.
   \label{fig:Brechung}
 \end{figure}
 
-Wird nun die Brechung an einem Quader betrachtet fällt auf, dass bei vollständigem durchlauf eines Lichtstrahls, der austretende Lichtstrahl parallel zu einfallenden verläuft.
-Allerdings mit einem \textit{Strahlenversatz}. Diese Situation kann der \autoref{fig:Strahlenversatz} entnommen werden.
+Wird nun die Brechung an einem Quader betrachtet fällt auf, dass bei vollständigem Durchlauf eines Lichtstrahls, der austretende Lichtstrahl parallel zum Einfallenden verläuft.
+Allerdings erfährt er dabei einen \textit{Strahlenversatz}. Diese Situation kann der \autoref{fig:Strahlenversatz} entnommen werden.
 Der Strahlenversatz kann gemäß
 \begin{equation}
   \label{eqn:Strahlenversatz}
@@ -74,8 +73,8 @@ berchnet werden.
   \label{fig:Strahlenversatz}
 \end{figure}
 
-Weiter kann nun auf eine Doppelbrechung durch ein Prisma betrachtet werden. Die hierbei entstehende Situation kann \autoref{fig:Prismabrechung} entnommen werden.
-Der Gesamte Ablenkwinkel $\delta$ kann gemäß 
+Weiter kann nun auf die Doppelbrechung durch ein Prisma geschlossen werden. Die hierbei entstehende Situation kann \autoref{fig:Prismabrechung} entnommen werden.
+Der gesamte Ablenkwinkel $\delta$ kann gemäß 
 \begin{equation}
   \label{eqn:delta}
   \delta = (\alpha_1 + \alpha_2) - (\beta_1 + \beta_2)
@@ -91,19 +90,19 @@ berechnet werden.
 
 \subsection{Reflexion und Transmission}
 \label{subsec:ReUTra}
-In den letzten beiden Abschnitten wurde das auschließliche Auftreten eines bestimmten Effektes betrachtet. Allerdings tritt in der Regel meist eine Mischung aus beiden Effekten
-auf. Das bedeutet ein Teil des Strahl wird reflektiert der andere Teil wird transmitiert und somit gebrochen. Die Gesetze der einzelnen Effekte ändern sich bei Überlagerung
-nicht. Allerdings teilt sich die Intensität des einfallenden Strahles in reflektierte Intensität und transmitierte Intensität auf. Dabei beschreibt $R$ den Anteil der 
+In den letzten beiden Abschnitten wurden Transmission und Reflexion voneinander getrennt betrachtet. Allerdings tritt in der Regel meist eine Mischung aus beiden Effekten
+auf. Das bedeutet, ein Teil des Strahl wird reflektiert und der andere Teil wird transmitiert und somit gebrochen. Die Gesetze der einzelnen Effekte ändern sich bei Überlagerung
+nicht. Allerdings teilt sich die Intensität des einfallenden Strahles in die Intensität des reflektierten- und transmitierten Teils auf. Dabei beschreibt $R$ den Anteil der 
 reflektierten Intensität an der einfallenden Intensität und $T$ den Anteil der transmitierten Intensität. Aufgrund der Energieerhaltung muss $R + T = 1$ gelten.
 
 \subsection{Beugung}
 \label{subsec:Beugung}
 Die Beugung einer Welle kann nicht durch die Strahlenoptik beschrieben werden. Daher wird nun das Phänomen der Beugung durch \textit{Wellenoptik} beschrieben. Licht ist eine
-elektromagnetische Welle, weshalb das Superpositionsprinzip gelten muss. Daher können zwei Lichtwellen miteinander interferieren. Beugung beschreibt allerdings das Phänomen,
-dass eine Welle an einem Objekt gebeugt wird. Trifft eine Lichtwelle auf ein Objekt oder einen Spalt, welches oder welcher jeweils klein gegenüber der Wellenlänge sind tritt
+elektromagnetische Welle, weshalb das Superpositionsprinzip gelten muss. Daher können zwei Lichtwellen miteinander interferieren. 
+Trifft eine Lichtwelle auf ein Objekt oder einen Spalt, welches oder welcher jeweils klein gegenüber der Wellenlänge ist, tritt
 nach der Wechselwirkung ein Interferenzmuster auf einem Schirm auf. Dies bestätigt sich durch einfache Überlegungen gemäß des Huygensschen Gesetzes für eine Welle, welche auf 
-einen Spalt trifft. Nun wird nicht nur ein Spalt betrachtet, sondern ein Gitter. Ein Gitter kann vereinfacht als zahlreiche Einzelspalte betrachet werden. Dabei wird erkannt, 
-dass sich an einem Gitter derselbe Beugungseffekt auftritt. Allerdings treten aufgrund der Anzahl der Einzelspalte nun für jede Wellenlänge Intensitätsmaxima $k$-ter Ordnung auf.
+einen Spalt trifft. Nun wird nicht nur ein Spalt betrachtet, sondern ein Gitter. Ein Gitter kann vereinfacht als zahlreiche Einzelspalte betrachtet werden. Dabei wird erkannt, 
+dass an einem Gitter derselbe Beugungseffekt auftritt. Allerdings treten aufgrund der Anzahl der Einzelspalte nun für jede Wellenlänge Intensitätsmaxima $k$-ter Ordnung auf.
 Das Interferenzmuster einer monochromatischen Lichtwelle der Wellenlänge $\lambda$, welche an einem Gitter mit der Gitterkonstante $d$ gebeugt wird, kann in Abhänigkeit vom 
 Winkel $\alpha$ durch die Formel
 \begin{equation}
