--- a/v400/content/auswertung.tex
+++ b/v400/content/auswertung.tex
@@ -15,7 +15,7 @@ Die Fehlerrechnung wird in \textit{Python} unter Verwendung des Paketes \textit{
 \subsection{Reflexionsgesetz}
 \label{subsec:A_Reflexion}
 Zur Überprüfung des Reflexionsgesetzes werden die in \autoref{tab:Reflexion} aufgeführten Messwerte betrachtet. 
-Die Differenz zwischen Einfallswinkel $\alpha_1$ und Ausfallswinkel $\alpha_2$ sollte nach der Theorie $0$ ergeben.
+Die Differenz zwischen Einfallswinkel $\alpha_1$ und Ausfallswinkel $\alpha_2$ sollte nach der Theorie $\qty{0}{\degree}$ ergeben.
 
 \begin{table}
   \centering
@@ -37,12 +37,12 @@ Die Differenz zwischen Einfallswinkel $\alpha_1$ und Ausfallswinkel $\alpha_2$ s
 \end{table}
 
 Zu den Messwerten kann eine Unsicherheit von jeweils $\qty{1}{\degree}$ angenommen werden, die auf Ableseungenauigkeiten und Abweichungen durch den Aufbau der Apparatur beruht.
-Auch in Anbetracht dieser Unsicherheit von insgesamt $\pm \qty{2}{\degree}$ lässt sich das Reflexionsgesetz nicht bestätigen, die Ursachen für dieses Ergebnis werden i
+Auch in Anbetracht dieser Unsicherheit von insgesamt $\pm \qty{2}{\degree}$ lässt sich das Reflexionsgesetz nicht bestätigen, die Ursachen für dieses Ergebnis werden in
 \autoref{sec:Diskussion} erörtert.
 
 \subsection{Brechungsgesetz}
 \label{subsec:A_Brechung}
-Um das Brechungsgesetz \eqref{eqn:Brechung} zu überprüfen werden Messwerte der Einfallswinkel $\alpha$ und zugehörige Brechungswinkel $\beta$ aus \autoref{tab:Brechung} verwendet.
+Um das Brechungsgesetz \eqref{eqn:Brechung} zu überprüfen, werden Messwerte der Einfallswinkel $\alpha$ und zugehörige Brechungswinkel $\beta$ aus \autoref{tab:Brechung} verwendet.
 Durch Umstellen der \autoref{eqn:Brechung} und Einsetzen des Brechungsindizes von Luft $n_\text{Luft} \approx 1$ ergibt sich der Brechungsindex 
 \begin{equation*}
   n = \frac{\sin{\alpha}}{\sin{\beta}}
@@ -109,7 +109,7 @@ Die Ergebnisse der Rechnung sind in \autoref{tab:Strahlenversatz} aufgeführt.
 \label{subsec:A_Prisma}
 Bei der Untersuchung der Brechung im Prisma, wurden Messwerte der Einfallswinkel $\alpha_1$ und der Austrittswinkel $\alpha_2$ zu einem grünen- und einem roten Laser genommen.
 Aus diesen Messwerten lässt sich die Ablenkung $\delta$ gemäß \autoref{eqn:delta} der Strahlen berechnen. Dazu werden die Brechungswinkel $\beta_1$ über das Brechungsgesetz 
-\autoref{eqn:Brechung} bestimmt und der Winkel $\beta_2$ über den Zusammenhang $\beta_1 + \beta_2 = \gamma$ berechnet. Der brechende Winkel des Prismas ist 
+\eqref{eqn:Brechung} bestimmt und der Winkel $\beta_2$ über den Zusammenhang $\beta_1 + \beta_2 = \gamma$ berechnet. Der brechende Winkel des Prismas ist 
 $\gamma = \qty{60}{\degree}$. Das Prisma besteht aus Kronglas und hat somit einen Brechungsindex von $n_\text{Prisma} =  1.5067$ \cite{czichos}.
 Die Messwerte, sowie die Ergebnisse der Rechnung sind \autoref{tab:Prisma} zu entnehmen.
 
@@ -135,12 +135,12 @@ Die Messwerte, sowie die Ergebnisse der Rechnung sind \autoref{tab:Prisma} zu en
 
 \subsection{Beugung am Gitter}
 \label{subsec:A_Beugung}
-Im letzten Teil des Versuches wurde die Beugung eines roten und eines grünen Lasers an einem Gitter untersucht. Dazu wurden drei verschiedene Gitter verwendet mit den 
-Gitterkonstanten $d_1 = \qty{1.67}{\micro\metre}$, $d_2 = \qty{3.3}{\micro\metre}$ und $d_3 = \qty{10}{\micro\metre}$ verwendet. Bei der Messungen wurden, wenn optisch
-möglich, zwei Beugungswinkel pro Ordnung $k$ gemessen, da theoretisch eine symetrische Verteilung um das Lot auftreten sollte. Es wurde ein roter Laser und ein grüner Laser
-verwendet. Die augenommenen Messwerte sind in den Tabellen \ref{tab:Beugung600}, \ref{tab:Beugung300} und \ref{tab:Beugung100} dargestellt. Aus den aufgenommenen Beugungswinkeln kann 
-für die $k$-te Ordnung mit der zugehörigen Gitterkonstante $d$ gemäß Formel \eqref{eqn:Beugung} eine exerimentelle Wellenlänge bestimmt werden. Dies wird zu jedem Beugungswinkel
-gemacht und die daraus resultierenden Wellenlängen werden in den Tabellen \ref{tab:Beugung600}, \ref{tab:Beugung300} und \ref{tab:Beugung100} dargestellt.
+Im letzten Teil des Versuches wird die Beugung eines roten und eines grünen Lasers an einem Gitter untersucht. Dazu werden drei verschiedene Gitter mit den 
+Gitterkonstanten $d_1 = \qty{1.67}{\micro\metre}$, $d_2 = \qty{3.3}{\micro\metre}$ und $d_3 = \qty{10}{\micro\metre}$ verwendet. Bei der Messung wurden, wenn dies optisch
+möglich war, zwei Beugungswinkel pro Ordnung $k$ gemessen, da theoretisch eine symmetrische Verteilung um das Lot auftreten sollte.
+Die augenommenen Messwerte sind in den Tabellen \ref{tab:Beugung600}, \ref{tab:Beugung300} und \ref{tab:Beugung100} dargestellt. Aus den aufgenommenen Beugungswinkeln kann 
+für die $k$-te Ordnung mit der zugehörigen Gitterkonstante $d$ gemäß \autoref{eqn:Beugung} eine experimentelle Wellenlänge bestimmt werden. Dies wird zu jedem Beugungswinkel
+durchgeführt und die daraus resultierenden Wellenlängen werden in den Tabellen \ref{tab:Beugung600}, \ref{tab:Beugung300} und \ref{tab:Beugung100} dargestellt.
 
 \begin{table}
   \centering
@@ -204,4 +204,4 @@ gemacht und die daraus resultierenden Wellenlängen werden in den Tabellen \ref{
 
 Aus den berechneten Wellenlängen wird nun ein Mittelwert der Wellenlänge gebildet. Für den grünen Laser ergibt sich eine Wellenlänge von 
 $\overline{\lambda}_{\text{grün}} = \qty{543.51 +- 14.21}{\nano\metre}$. Der Fehler genügt dem Mittelwertfehler gemäß der Formel \eqref{eqn:MW-Fehler}.
-Für den roten Laser wurde eine Wellenlänge von $\overline{\lambda}_{\text{rot}} = \qty{650.18 +- 17.81}{\nano\metre}$ bestimmt.
+Für den roten Laser wird eine Wellenlänge von $\overline{\lambda}_{\text{rot}} = \qty{650.18 +- 17.81}{\nano\metre}$ bestimmt.
