--- a/v704/content/theorie.tex
+++ b/v704/content/theorie.tex
@@ -12,10 +12,11 @@ beiden verwendeten Strahlungsarten bekannt sein. Diese Themen werden in den folg
 \subsection{\texorpdfstring{$\gamma$-Strahlung}{Gamma-Strahlung}}
 \label{subec:Gammastrahlung}
 $\gamma$\,-Quanten können entstehen, wenn ein angeregter Atomkern, also ein Atomkern mit erhöhter Energie, in einen niederenergetischen und stabileren Zustand zurückfällt. Die 
-dabei entstehende Energiedifferenz wird in Form von $\gamma$\,-Quanten frei. Ein $\gamma$\,-Quant ist allerdings kein Teilchen im klassischem Sinne. Ebenfalls können einzelne
+dabei entstehende Energiedifferenz wird in Form von $\gamma$\,-Quanten frei. Ein $\gamma$\,-Quant ist allerdings kein Teilchen im klassischem Sinne, sondern unterliegt 
+dem \textit{Welle-Teilchen-Dualismus}. Ebenfalls können einzelne
 $\gamma$\,-Quanten nicht nur durch ihren Wellencharakter beschrieben werden. Wird aber eine große Zahl an $\gamma$\,-Quanten betrachtet, kann im zeitlichen Mittel der 
-Teilchencharakter vernachlässigt werden. Daher kann $\gamma$\,-Strahlung in diesem Versuch als elektromagnetische Welle, mit den typischen Eigenschaften der e-m-Welle,
-betrachtet werden. Daher gilt für $\gamma$\,-Strahlung gemäß der Quantentheorie 
+Teilchencharakter vernachlässigt werden. Daher kann $\gamma$\,-Strahlung in diesem Versuch als elektromagnetische Welle betrachtet werden. 
+Daher gilt für $\gamma$\,-Strahlung gemäß der Quantentheorie 
 \begin{equation*}
     E_{\gamma} = \frac{h}{\nu} = \frac{hc}{\lambda}.
 \end{equation*}
