--- a/v704/content/diskussion.tex
+++ b/v704/content/diskussion.tex
@@ -10,13 +10,13 @@ von der Nullmessung ab, welche in \autoref{sec:Durchführung} beschrieben wurde.
 Aus der Messreihe zu Zink ergibt sich die Absorptionskonstante $\mu_{\text{Zn}} = \qty{37.8 +- 1.9}{\metre^{-1}}$. Hierzu lautet die Comptonabsorptionskonstante 
 $\mu_{\text{com, Zn}} = \qty{50.61}{\metre^{-1}}$. Die experimentelle Absorptionskonstante liegt unter dem Wert der Comptonabsorptionskonstante zu Zink. Daraus wird gedeutet, 
 dass der Comptoneffekt der überwiegende Absorptionseffekt ist. Allerdings dürfte in diesem Fall die gesamte Absorptionskonstante nicht kleiner als die Comptonabsorptionskonstante 
-sein, weshalb auf eine statistische Abweichung der Messwerte geschlossen werden muss. 
+sein, weshalb auf eine statistische und oder systematische Abweichung der Messwerte geschlossen werden muss. 
 Die Nullzählrate liegt bei $N_{0, \text{Zn}} = \qty{111.1 +- 2.5}{\second^{-1}}$ und weicht somit um $\symup{\Delta N_{0, \text{Zn}}} = \num{8.2 +- 3.1}\%$ von der Nullmessung ab.
 
-Die Abweichungen der Zählraten sind keine Abweichung von Literaturwerten, sondern von einer statistisch fehlerbehafteten Messung, weshalb von dieser nicht auf die Qualität der
-Messung geschlossen werden kann. Ebenso unterliegen die Absorptionskonstanten statistischen Fehlern. 
-Jedoch kann angemerkt werden, dass der verwendete Cs-137-Strahler lediglich $\gamma$\,-Quanten abstrahlt, welche eine Energie von $E_\gamma = \qty{662}{\kilo\electronvolt}$
-\cite{physikalischesGrundpraktikum} haben. Daher ist der Paarbildungseffekt in der Deutung der Absorptionskonstanten auszuschließen.
+Die Abweichungen der Zählraten sind keine Abweichung von Literaturwerten, sondern von einer statistisch fehlerbehafteten Messung, weshalb von dieser nicht direkt auf die
+Qualität der Messung geschlossen werden kann. Dennoch kann aus dem Fit eine relativ kleine Unsicherheit gewonnen werden. Ebenso unterliegen die Absorptionskonstanten 
+statistischen Fehlern. Jedoch kann angemerkt werden, dass der verwendete Cs-137-Strahler lediglich $\gamma$\,-Quanten abstrahlt, welche eine Energie von 
+$E_\gamma = \qty{662}{\kilo\electronvolt}$ \cite{physikalischesGrundpraktikum} haben. Daher ist der Paarbildungseffekt in der Deutung der Absorptionskonstanten auszuschließen.
 
 Im zweiten Teil dieses Versuches wurde die Absorptionskurve von $\beta$\,-Strahlung, aus einer Technezium-99 Strahlungsquelle aufgenommen. Aus der durchgeführten 
 Regression wurde die maximale Strahlungsreichweite in einer Aluminiumabsorberschicht bestimmt. Diese lautet $R_\text{max} = \qty{0.092 +- 0.004}{\gram\per\centi\metre\squared}$. 
