Korrektur für Carl :dromedary_camel:

--- a/v703/content/auswertung.tex
+++ b/v703/content/auswertung.tex
@@ -162,6 +162,7 @@ Die daraus resultierenden Ladungswerte sind \autoref{fig:plot1} in Abhänigkeit 
 \begin{figure}
   \centering
   \includegraphics{plot1.pdf}
-  \caption{In dieser Abbildung ist freigesetzte Ladungen des Zählrohres gegen die Spannung aufgetragen.}
+  \caption{Freigesetzte Ladungsmenge gegen den Strom des Zählrohres. Eine deutliche Linearität ist zu erkennen. Auf Angabe des (konstanten) Fehlers des Stromes wird zwecks 
+  Übersichtlichkeit verzichtet.}
   \label{fig:plot1}
 \end{figure}
