--- a/v703/content/diskussion.tex
+++ b/v703/content/diskussion.tex
@@ -1,7 +1,7 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 In diesem Versuch wurde zunächst die Charakteristik des verwendeten Zählrohres bestimmt. Dabei wurde eine Plateaulänge $L = \qty{270}{\volt}$ mit einer Steigung von 
-$\qty{1.25+-0.22}{\percent\per\volt}$ bestimmt. Diese Werte zeugen von einem breiten Messintervall mit einer relativ geringen Steigung. Daher genügt das verwendete 
+$m_\text{Plateau} = \qty{1.13+-0.20}{\percent\per\volt}$ bestimmt. Diese Werte zeugen von einem breiten Messintervall mit einer relativ geringen Steigung. Daher genügt das verwendete 
 Zählrohr dem Genauigkeitsanspruch, der in den weiteren Messungen nötig ist.
 
 Dann wurde die Nachentladung untersucht. Dabei ergab sich ein zeitlicher Abstand der untersuchten Peaks von $\qty{185}{\micro\second}$. Zu diesem Wert kann keine sinnvolle
