--- a/v702/content/durchfuehrung.tex
+++ b/v702/content/durchfuehrung.tex
@@ -1,2 +1,18 @@
 \section{Durchführung}
 \label{sec:Durchführung}
+Für die Durchführung dieses Versuches werden zwei Proben instabiler Isotope benötigt. Dieses Versuchsprotokoll befasst sich mit den Isotopen $\ce{^{52}_{23}V}$ und 
+$\ce{^{104}_{45}}$. Beide Isotope müssen, bevor der Verusch durchgeführt werden kann, durch Neutronenbestrahlung \textit{aktiviert} werden. Dies geschieht in einem dafür
+konstruierten Behälter. $\ce{^{104}_{45}}$ muss sich für mindestens $\qty{20}{\minute}$ in diesem Behälter befinden, bevor damit eine Messung durchgeführt werden kann. 
+$\ce{^{52}_{23}V}$ muss lediglich $\qty{15}{\minute}$ reaktiviert werden. Sind die Proben einsatzbereit werden diese in die Messapparatur eingesetzt, welche in
+\autoref{fig:Messapparatur} dargestellt wird.  
+
+\begin{figure}
+    \centering
+    \includegraphics[width = .7\textwidth]{content/Skizzeapparatur.png}
+    \caption{In dieser Abbildung ist der Aufbau der verwendeten Messapparatur skizziert. \cite{v702}}
+    \label{fig:Messapparatur}
+\end{figure}
+
+Die Messung wird nun mit dem Rhodium-Isotrop begonnen. Dazu wird die Probe eingeführt und an dem \textit{Zählgerät} wird ein Messzeitintervall $\symup{\Delta}t = \qty{15}{\second}$
+eingestellt. Das Zählgerät besitzt zwei Zähler. Nach dem Durchlauf eines Messzeitintervalls schlägt der eingebaute Schalter um und der andere Zähler läuft weiter. Durch dieses 
+Verfahren werden für Rhodium
