Theorie durch (so wie ich nach 15h Physik heute)

--- a/v702/content/durchfuehrung.tex
+++ b/v702/content/durchfuehrung.tex
@@ -6,12 +6,12 @@ konstruierten Behälter. $\ce{^{104}_{45}}$ muss sich für mindestens $\qty{20}{
 $\ce{^{52}_{23}V}$ muss lediglich $\qty{15}{\minute}$ reaktiviert werden. Sind die Proben einsatzbereit werden diese in die Messapparatur eingesetzt, welche in
 \autoref{fig:Messapparatur} dargestellt wird.  
 
-\begin{figure}
-    \centering
-    \includegraphics[width = .7\textwidth]{content/Skizzeapparatur.png}
-    \caption{In dieser Abbildung ist der Aufbau der verwendeten Messapparatur skizziert. \cite{v702}}
-    \label{fig:Messapparatur}
-\end{figure}
+%\begin{figure}
+%    \centering
+%    \includegraphics[width = .7\textwidth]{content/Skizzeapparatur.png}
+%    \caption{In dieser Abbildung ist der Aufbau der verwendeten Messapparatur skizziert. \cite{v702}}
+%    \label{fig:Messapparatur}
+%\end{figure}
 
 Die Messung wird nun mit dem Rhodium-Isotrop begonnen. Dazu wird die Probe eingeführt und an dem \textit{Zählgerät} wird ein Messzeitintervall $\symup{\Delta}t = \qty{15}{\second}$
 eingestellt. Das Zählgerät besitzt zwei Zähler. Nach dem Durchlauf eines Messzeitintervalls schlägt der eingebaute Schalter um und der andere Zähler läuft weiter. Durch dieses 
