--- a/lit.bib
+++ b/lit.bib
@@ -185,22 +185,29 @@
 }
 
 @online{v704,
-	title        = {704 - Absorption von Gamma- und Beta-Strahlung},
+	title        = {V704 - Absorption von Gamma- und Beta-Strahlung},
 	organization = {TU Dortmund},
 	urldate      = {2022-05-31},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/2005007/mod_resource/content/2/V704.pdf},
 }
 
 @online{v703,
-	title        = {703 - Das Geiger-Müller-Zählrohr},
+	title        = {V703 - Das Geiger-Müller-Zählrohr},
 	organization = {TU Dortmund},
 	urldate      = {2022-06-08},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977248/mod_resource/content/2/V703.pdf},
 }
 
 @online{v400,
-	title        = {400 - Reflexion, Brechung und Beugung},
+	title        = {V400 - Reflexion, Brechung und Beugung},
 	organization = {TU Dortmund},
 	urldate      = {2022-06-14},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933349/mod_resource/content/5/V400.pdf},
+}
+
+@online{v702,
+	title        = {V702 - Aktivierung mit Neutronen},
+	organization = {TU Dortmund},
+	urldate      = {2022-06-22},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977247/mod_resource/content/2/V702.pdf},
 }
