--- a/v703/content/diskussion.tex
+++ b/v703/content/diskussion.tex
@@ -5,7 +5,7 @@ $m_\text{Plateau} = \qty{1.13+-0.20}{\percent\per\volt}$ bestimmt. Diese Werte z
 Zählrohr dem Genauigkeitsanspruch, der in den weiteren Messungen nötig ist.
 
 Dann wurde die Nachentladung untersucht. Dabei ergab sich ein zeitlicher Abstand der untersuchten Peaks von $\qty{185}{\micro\second}$. Zu diesem Wert kann keine sinnvolle
-Ungenauigkeit angegeben werden, allerdings ist anzumerken das anhand des Bildes der Abstand nur bedingt genau abgelesen werden kann.  
+Ungenauigkeit angegeben werden, allerdings ist anzumerken, dass anhand des Bildes der Abstand nur bedingt genau abgelesen werden kann.  
 
 Anschließend wurde die Totzeit über zwei unterschiedliche Methoden berechnet. Dabei ergab die Totzeit durch Bestimmung mit dem Oszilloskop $T = \qty{130}{\micro\second}$. Dahingegen
 liefert die Zwei-Quellen-Methode eine Totzeit von $T = \qty{13.53 +-49.23}{\micro\second}$. Der Wert des Oszilloskops unterliegt dem selben Fehler wie die Nachentladungszeit.
